# interpysh

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
examples/: bool_is_empty.json  code_N.json  code_do_count.json  code_do_range.json  code_do_then_pop.json  code_do_times.json  code_do_when.json  code_extract.json  code_extract2.json  code_insert.json  code_pop.json  code_size.json  float_dup_times.json  int_dup_times.json  int_shove.json  int_shove_dup.json  int_vector_conj.json  int_vector_iterate.json  int_vector_replace.json  int_vector_set_nth.json  int_vector_subvec.json  int_yank.json  int_yank2.json  int_yank_dup.json  relu_via_max.json  string_append_char.json  string_split.json  vector_int_index_of.json
src/interpysh/: main.py
