[project]
name = "InterPysh"
version = "0.1.0"
requires-python = ">= 3.11"
authors = [
    {name = "Rowan Torbitzky-Lane", email = "rowan.a.tl@protonmail.com"}
]
description = "A basic gui to see how push code runs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
interpysh = "interpysh.main:app"
